fix for modal on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2417,4 +2417,6 @@ footer .menu li a:hover {
 .modal-body {
   margin-left: 30px;
 }
-/*.model-content */
+.clickable {
+  cursor: pointer;
+}
